// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`svelte/UIIcon renders correctly - basic 1`] = `
<div>
  <i
    class="ui-icon ui-icon--star--large"
  />
</div>
`;

exports[`svelte/UIIcon renders correctly - with id 1`] = `
<div>
  <i
    class="ui-icon ui-icon--star"
    id="test"
  />
</div>
`;
